Coppée - Poèmes modernes

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,15 @@
+scans/
+build/
 results/
 *.otf
 *.ttf
 *.pdf
-livres.encours
-livres.autres
-livres.termines
+livres.encours/
+livres.autres/
+livres.termines/
+livres.publies/efele_catalogue_commun.txt
+livres.publies/feed.xml
+livres.publies/liste.epub.html
+livres.publies/liste.daisy.html
+livres.publies/liste.mobipocket.html
+livres.publies/liste.sources.html
