Bernard - Le taxi fantôme

--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -74,6 +74,9 @@
       <ant target='@{target}' dir='barbusse/nous_autres'/>
       <ant target='@{target}' dir='baudelaire/les_fleurs_du_mal_1857'/>
       <ant target='@{target}' dir='baudelaire/les_fleurs_du_mal_1861'/>
+      <ant target='@{target}' dir='bernard/citoyens_animaux_phenomenes'/>
+      <ant target='@{target}' dir='bernard/le_taxi_fantome'/>
+      <ant target='@{target}' dir='bernard/les_coteaux_du_medoc'/>
       <ant target='@{target}' dir='bloy/exegese_des_lieux_communs'/>
       <ant target='@{target}' dir='bloy/exegese_nouvelle_serie'/>
       <ant target='@{target}' dir='bourgeois/solidarite'/>
