Régnier - La pécheresse

--- a/livres.publies/regnier/oeuvres/build.xml
+++ b/livres.publies/regnier/oeuvres/build.xml
@@ -26,6 +26,7 @@
     <book x='sujets_et_paysages'/>
     <book x='le_vrai_bonheur'/>
     <book x='proses_datees'/>
+    <book x='la_pecheresse'/>
 
     <book x='sites'/>
     <book x='01_premiers_poemes'/>
