Coppée: Des vers français - Une lettre de Christmas - Les vrais riches

--- a/livres.publies/coppee/oeuvres_completes/build.xml
+++ b/livres.publies/coppee/oeuvres_completes/build.xml
@@ -20,9 +20,8 @@
     <book x='12_les_paroles_sinceres'/>
     <book x='13_dans_la_priere_et_dans_la_lutte'/>
     <book x='14_de_pieces_et_de_morceaux'/>
-<!--
     <book x='15_des_vers_francais'/>
--->
+    <book x='15b_une_lettre_de_christmas'/>
     <book x='16_une_idylle_pendant_le_siege'/>
     <book x='17_contes_en_prose'/>
     <book x='18_vingt_contes_nouveaux'/>
@@ -32,8 +31,8 @@
     <book x='22_henriette'/>
 <!--
     <book x='23_tout_une_jeunesse'/>
-    <book x='24_les_vrais_riches'/>
 -->
+    <book x='24_les_vrais_riches'/>
     <book x='25_longues_et_breves'/>
   </target>
 
