Coppée - Olivier - Le devoir des jeunes

--- a/livres.publies/coppee/oeuvres_completes/build.xml
+++ b/livres.publies/coppee/oeuvres_completes/build.xml
@@ -10,8 +10,8 @@
     <book x='04_poemes_modernes'/>
     <book x='05_les_humbles'/>
     <book x='06_le_cahier_rouge'/>
-<!--
     <book x='07_olivier'/>
+<!--
     <book x='08_les_recits_et_les_elegies'/>
     <book x='09_contes_en_vers'/>
 -->
@@ -34,6 +34,7 @@
 -->
     <book x='24_les_vrais_riches'/>
     <book x='25_longues_et_breves'/>
+    <book x='31_le_devoir_des_jeunes'/>
   </target>
 
   <target name='collections'>
