Coppée - Le coupable

--- a/livres.publies/coppee/oeuvres_completes/build.xml
+++ b/livres.publies/coppee/oeuvres_completes/build.xml
@@ -34,6 +34,7 @@
 -->
     <book x='24_les_vrais_riches'/>
     <book x='25_longues_et_breves'/>
+    <book x='27_le_coupable'/>
     <book x='31_le_devoir_des_jeunes'/>
   </target>
 
