Coppée - Paris ; La liberté de l’enseignement

--- a/livres.publies/coppee/oeuvres_completes/build.xml
+++ b/livres.publies/coppee/oeuvres_completes/build.xml
@@ -35,7 +35,9 @@
     <book x='24_les_vrais_riches'/>
     <book x='25_longues_et_breves'/>
     <book x='27_le_coupable'/>
+    <book x='28_paris'/>
     <book x='31_le_devoir_des_jeunes'/>
+    <book x='32_la_liberte_de_l_enseignement'/>
   </target>
 
   <target name='collections'>
