Coppée - Toute une jeunesse

--- a/livres.publies/coppee/oeuvres_completes/build.xml
+++ b/livres.publies/coppee/oeuvres_completes/build.xml
@@ -29,9 +29,7 @@
     <book x='20_gustave_flaubert_declamateur'/>
     <book x='21_contes_rapides'/>
     <book x='22_henriette'/>
-<!--
-    <book x='23_tout_une_jeunesse'/>
--->
+    <book x='23_toute_une_jeunesse'/>
     <book x='24_les_vrais_riches'/>
     <book x='25_longues_et_breves'/>
     <book x='27_le_coupable'/>
