Coppée - Mon franc parler / La bonne souffrance / Contes pour les jours de fête

--- a/livres.publies/coppee/oeuvres_completes/build.xml
+++ b/livres.publies/coppee/oeuvres_completes/build.xml
@@ -32,8 +32,11 @@
     <book x='23_toute_une_jeunesse'/>
     <book x='24_les_vrais_riches'/>
     <book x='25_longues_et_breves'/>
+    <book x='26_mon_franc_parler'/>
     <book x='27_le_coupable'/>
     <book x='28_paris'/>
+    <book x='29_la_bonne_souffrance'/>
+    <book x='30_contes_pour_les_jours_de_fete'/>
     <book x='31_le_devoir_des_jeunes'/>
     <book x='32_la_liberte_de_l_enseignement'/>
   </target>
