Nau - Lettres de Corse et de Bretagne

--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -142,6 +142,7 @@
       <ant target='@{target}' dir='muller/mon_dernier_combat'/>
       <ant target='@{target}' dir='murger/les_buveurs_d_eau'/>
       <ant target='@{target}' dir='nau/force_ennemie'/>
+      <ant target='@{target}' dir='nau/lettres_de_corse_et_de_bretagne'/>
       <ant target='@{target}' dir='nerval/oeuvres_completes'/>
       <ant target='@{target}' dir='otlet/l_afrique_aux_noirs'/>
       <ant target='@{target}' dir='pawlowski/histoires_montmartroises'/>
