--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -127,10 +127,11 @@
       <ant target='@{target}' dir='liquier/le_trac_d_un_gendre'/>
       <ant target='@{target}' dir='liquier/mon_futur'/>
       <ant target='@{target}' dir='mac_orlan/a_bord_de_l_etoile_matutine'/>
-      <ant target='@{target}' dir='mac_orlan/le_chant_de_l_equipage'/>
-      <ant target='@{target}' dir='mac_orlan/petit_manuel_du_parfait_aventurier'/>
       <ant target='@{target}' dir='mac_orlan/la_bete_conquerante'/>
       <ant target='@{target}' dir='mac_orlan/la_cavaliere_elsa'/>
+      <ant target='@{target}' dir='mac_orlan/la_fin'/>
+      <ant target='@{target}' dir='mac_orlan/le_chant_de_l_equipage'/>
+      <ant target='@{target}' dir='mac_orlan/petit_manuel_du_parfait_aventurier'/>
       <ant target='@{target}' dir='margueritte_paul/simple_histoire'/>
       <ant target='@{target}' dir='margueritte_victor/la_garconne'/>
       <ant target='@{target}' dir='margueritte_victor/le_soleil_dans_la_geole'/>
