--- a/livres.publies/chamfort/oeuvres_completes_auguis/build.xml
+++ b/livres.publies/chamfort/oeuvres_completes_auguis/build.xml
@@ -15,6 +15,16 @@
     <book x='08_tableaux_historiques'/>
     <book x='10_melanges_de_litterature'/>
     <book x='12_theatre'/>
+    <book x='13_discours_sur_l_influence_des_grands_ecrivains'/>
+    <book x='14_des_academies'/>
+    <book x='15_dissertation_sur_l_imitation_de_la_nature'/>
+    <book x='16_dialogue'/>
+    <book x='17_question'/>
+    <book x='18_petits_dialogues_philosophiques'/>
+    <book x='19_question_reponse'/>
+    <book x='20_observations'/>
+
+    <book x='21_avis'/>
   </target>
 
 <!--
