index, etc et Spectral pour le site

--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -176,6 +176,7 @@
       <ant target='@{target}' dir='roussel/locus_solus'/>
       <ant target='@{target}' dir='roussel/nouvelles_impressions_d_afrique'/>
       <ant target='@{target}' dir='savignon/filles_de_la_pluie'/>
+      <ant target='@{target}' dir='samain/oeuvres'/>
       <ant target='@{target}' dir='schwob/le_roi_au_masque_d_or'/>
       <ant target='@{target}' dir='sebillot/la_republique_c_est_la_tranquillite'/>
       <ant target='@{target}' dir='segalen/les_immemoriaux'/>
