--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -98,6 +98,7 @@
       <ant target='@{target}' dir='decembre-alonnier/typographes_et_gens_de_lettres'/>
       <ant target='@{target}' dir='derennes/l_enfant_dans_l_herbe'/>
       <ant target='@{target}' dir='duprat/histoire_de_l_imprimerie_imperiale'/>
+      <ant target='@{target}' dir='elbel/pour_une_paix_veritable'/>
       <ant target='@{target}' dir='elder/le_peuple_de_la_mer'/>
       <ant target='@{target}' dir='estaunie/l_epave'/>
       <ant target='@{target}' dir='estaunie/le_ferment'/>
