--- a/livres.publies/regnier/oeuvres/build.xml
+++ b/livres.publies/regnier/oeuvres/build.xml
@@ -27,6 +27,7 @@
     <book x='le_vrai_bonheur'/>
     <book x='proses_datees'/>
     <book x='la_pecheresse'/>
+    <book x='vues'/>
 
     <book x='sites'/>
     <book x='01_premiers_poemes'/>
@@ -35,7 +36,6 @@
     <book x='05_la_cite_des_eaux'/>
     <book x='06_la_sandale_ailee'/>
     <book x='08_1914_1916'/>
-    
   </target>
 
   <target name='collections'>
