--- a/livres.publies/chamfort/oeuvres_completes_auguis/build.xml
+++ b/livres.publies/chamfort/oeuvres_completes_auguis/build.xml
@@ -25,14 +25,13 @@
     <book x='20_observations'/>
 
     <book x='21_avis'/>
+    <book x='23_epitres'/>
     <book x='28_deux_articles'/>
   </target>
 
-<!--
   <target name='collections'>
-    <collection  x='romans_et_nouvelles'/>
+    <collection  x='chamfort_auguis'/>
   </target>
--->
 
 </project>
 
