Chamfort — Lettres de Mirabeau à Chamfort

--- a/livres.publies/chamfort/oeuvres_completes_auguis/build.xml
+++ b/livres.publies/chamfort/oeuvres_completes_auguis/build.xml
@@ -27,6 +27,7 @@
     <book x='21_avis'/>
     <book x='23_epitres'/>
     <book x='28_deux_articles'/>
+    <book x='29_lettres_de_mirabeau_a_chamfort'/>
   </target>
 
   <target name='collections'>
