--- a/livres.publies/chamfort/oeuvres_completes_auguis/build.xml
+++ b/livres.publies/chamfort/oeuvres_completes_auguis/build.xml
@@ -26,6 +26,7 @@
 
     <book x='21_avis'/>
     <book x='23_epitres'/>
+    <book x='25_contes'/>
     <book x='27_lettres_diverses'/>
     <book x='28_deux_articles'/>
     <book x='29_lettres_de_mirabeau_a_chamfort'/>
