Chamfort — Essai d’un commentaire sur Racine

--- a/livres.publies/chamfort/oeuvres_completes_auguis/build.xml
+++ b/livres.publies/chamfort/oeuvres_completes_auguis/build.xml
@@ -25,6 +25,7 @@
     <book x='20_observations'/>
 
     <book x='21_avis'/>
+    <book x='22_essai_d_un_commentaire_sur_racine'/>
     <book x='23_epitres'/>
     <book x='25_contes'/>
     <book x='27_lettres_diverses'/>
