Coppée — Le passant

--- a/livres.publies/coppee/oeuvres_completes/build.xml
+++ b/livres.publies/coppee/oeuvres_completes/build.xml
@@ -37,6 +37,7 @@
     <book x='30_contes_pour_les_jours_de_fete'/>
     <book x='31_le_devoir_des_jeunes'/>
     <book x='32_la_liberte_de_l_enseignement'/>
+    <book x='33_le_passant'/>
   </target>
 
   <target name='collections'>
