Coppée — Deux douleurs

--- a/livres.publies/coppee/oeuvres_completes/build.xml
+++ b/livres.publies/coppee/oeuvres_completes/build.xml
@@ -38,6 +38,7 @@
     <book x='31_le_devoir_des_jeunes'/>
     <book x='32_la_liberte_de_l_enseignement'/>
     <book x='33_le_passant'/>
+    <book x='34_deux_douleurs'/>
   </target>
 
   <target name='collections'>
