--- a/livres.publies/coppee/oeuvres_completes/build.xml
+++ b/livres.publies/coppee/oeuvres_completes/build.xml
@@ -39,6 +39,7 @@
     <book x='32_la_liberte_de_l_enseignement'/>
     <book x='33_le_passant'/>
     <book x='34_deux_douleurs'/>
+    <book x='35_fais_ce_que_dois'/>
   </target>
 
   <target name='collections'>
