--- a/livres.publies/coppee/oeuvres_completes/build.xml
+++ b/livres.publies/coppee/oeuvres_completes/build.xml
@@ -40,6 +40,7 @@
     <book x='33_le_passant'/>
     <book x='34_deux_douleurs'/>
     <book x='35_fais_ce_que_dois'/>
+    <book x='36_l_abandonnee'/>
   </target>
 
   <target name='collections'>
