Coppée — Les bijoux de la délivrance

--- a/livres.publies/coppee/oeuvres_completes/build.xml
+++ b/livres.publies/coppee/oeuvres_completes/build.xml
@@ -41,6 +41,7 @@
     <book x='34_deux_douleurs'/>
     <book x='35_fais_ce_que_dois'/>
     <book x='36_l_abandonnee'/>
+    <book x='37_les_bijoux_de_la_delivrance'/>
   </target>
 
   <target name='collections'>
