--- a/livres.publies/chamfort/oeuvres_completes_auguis/build.xml
+++ b/livres.publies/chamfort/oeuvres_completes_auguis/build.xml
@@ -14,6 +14,7 @@
     <book x='07_caracteres_et_anecdotes'/>
     <book x='08_tableaux_historiques'/>
     <book x='10_melanges_de_litterature'/>
+    <book x='11_ebauches_d_une_poetique_dramatique'/>
     <book x='12_theatre'/>
     <book x='13_discours_sur_l_influence_des_grands_ecrivains'/>
     <book x='14_des_academies'/>
@@ -27,6 +28,7 @@
     <book x='21_avis'/>
     <book x='22_essai_d_un_commentaire_sur_racine'/>
     <book x='23_epitres'/>
+    <book x='24_odes'/>
     <book x='25_contes'/>
     <book x='27_lettres_diverses'/>
     <book x='28_deux_articles'/>
