Coppée — La maison de Molière

--- a/livres.publies/coppee/oeuvres_completes/build.xml
+++ b/livres.publies/coppee/oeuvres_completes/build.xml
@@ -42,6 +42,10 @@
     <book x='35_fais_ce_que_dois'/>
     <book x='36_l_abandonnee'/>
     <book x='37_les_bijoux_de_la_delivrance'/>
+    <book x='39_le_rendez_vous'/>
+    <book x='40_prologue_d_ouverture'/>
+    <book x='43_la_bataille_d_hernani'/>
+    <book x='44_la_maison_de_moliere'/>
   </target>
 
   <target name='collections'>
