Régnier — Le miroir des heures

--- a/livres.publies/regnier/oeuvres/build.xml
+++ b/livres.publies/regnier/oeuvres/build.xml
@@ -35,6 +35,7 @@
     <book x='04_les_medailles_d_argile'/>
     <book x='05_la_cite_des_eaux'/>
     <book x='06_la_sandale_ailee'/>
+    <book x='07_le_miroir_des_heures'/>
     <book x='08_1914_1916'/>
   </target>
 
