Coppée — L’homme et la fortune

--- a/livres.publies/coppee/oeuvres_completes/build.xml
+++ b/livres.publies/coppee/oeuvres_completes/build.xml
@@ -46,6 +46,7 @@
     <book x='40_prologue_d_ouverture'/>
     <book x='43_la_bataille_d_hernani'/>
     <book x='44_la_maison_de_moliere'/>
+    <book x='46_l_homme_et_la_fortune'/>
   </target>
 
   <target name='collections'>
