Chamfort — Poésies diverses

--- a/livres.publies/chamfort/oeuvres_completes_auguis/build.xml
+++ b/livres.publies/chamfort/oeuvres_completes_auguis/build.xml
@@ -30,6 +30,7 @@
     <book x='23_epitres'/>
     <book x='24_odes'/>
     <book x='25_contes'/>
+    <book x='26_poesies_diverses'/>
     <book x='27_lettres_diverses'/>
     <book x='28_deux_articles'/>
     <book x='29_lettres_de_mirabeau_a_chamfort'/>
