Coppée – Severo Torelli

--- a/livres.publies/coppee/oeuvres_completes/build.xml
+++ b/livres.publies/coppee/oeuvres_completes/build.xml
@@ -44,9 +44,12 @@
     <book x='37_les_bijoux_de_la_delivrance'/>
     <book x='39_le_rendez_vous'/>
     <book x='40_prologue_d_ouverture'/>
+    <book x='41_le_luthier_de_cremone'/>
+    <book x='42_le_tresor'/>
     <book x='43_la_bataille_d_hernani'/>
     <book x='44_la_maison_de_moliere'/>
     <book x='46_l_homme_et_la_fortune'/>
+    <book x='47_severo_torelli'/>
   </target>
 
   <target name='collections'>
