--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -133,6 +133,7 @@
       <ant target='@{target}' dir='mac_orlan/la_fin'/>
       <ant target='@{target}' dir='mac_orlan/le_chant_de_l_equipage'/>
       <ant target='@{target}' dir='mac_orlan/petit_manuel_du_parfait_aventurier'/>
+      <ant target='@{target}' dir='mac_orlan/u_713'/>
       <ant target='@{target}' dir='margueritte_paul/simple_histoire'/>
       <ant target='@{target}' dir='margueritte_victor/la_garconne'/>
       <ant target='@{target}' dir='margueritte_victor/le_soleil_dans_la_geole'/>
