--- a/livres.publies/coppee/oeuvres_completes/build.xml
+++ b/livres.publies/coppee/oeuvres_completes/build.xml
@@ -50,6 +50,7 @@
     <book x='44_la_maison_de_moliere'/>
     <book x='46_l_homme_et_la_fortune'/>
     <book x='47_severo_torelli'/>
+    <book x='48_les_jacobites'/>
   </target>
 
   <target name='collections'>
