--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -105,6 +105,7 @@
       <ant target='@{target}' dir='estaunie/un_simple'/>
       <ant target='@{target}' dir='faure/l_orateur_populaire'/>
       <ant target='@{target}' dir='flaubert/madame_bovary'/>
+      <ant target='@{target}' dir='franc-nohain/les_salles_d_attente'/>
       <ant target='@{target}' dir='gilbert_de_voisins/la_petite_angoisse'/>
       <ant target='@{target}' dir='gilbert_de_voisins/les_jardins_le_faune_et_le_poete'/>
       <ant target='@{target}' dir='gilbert_de_voisins/les_moments_perdus_de_john_shag'/>
