--- a/livres.publies/coppee/oeuvres_completes/build.xml
+++ b/livres.publies/coppee/oeuvres_completes/build.xml
@@ -42,12 +42,14 @@
     <book x='35_fais_ce_que_dois'/>
     <book x='36_l_abandonnee'/>
     <book x='37_les_bijoux_de_la_delivrance'/>
+    <book x='38_la_guerre_de_cent_ans'/>
     <book x='39_le_rendez_vous'/>
     <book x='40_prologue_d_ouverture'/>
     <book x='41_le_luthier_de_cremone'/>
     <book x='42_le_tresor'/>
     <book x='43_la_bataille_d_hernani'/>
     <book x='44_la_maison_de_moliere'/>
+    <book x='45_madame_de_maintenon'/>
     <book x='46_l_homme_et_la_fortune'/>
     <book x='47_severo_torelli'/>
     <book x='48_les_jacobites'/>
