Derème — Le laurier du Kaiser

--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -96,6 +96,7 @@
       <ant target='@{target}' dir='darwin/journal_of_researches'/>
       <ant target='@{target}' dir='daudet/lettres_de_mon_moulin'/>
       <ant target='@{target}' dir='decembre-alonnier/typographes_et_gens_de_lettres'/>
+      <ant target='@{target}' dir='dereme/le_laurier_du_kaiser'/>
       <ant target='@{target}' dir='derennes/l_enfant_dans_l_herbe'/>
       <ant target='@{target}' dir='duprat/histoire_de_l_imprimerie_imperiale'/>
       <ant target='@{target}' dir='elbel/pour_une_paix_veritable'/>
