Régnier — Les jeux rustiques et divins

--- a/livres.publies/regnier/oeuvres/build.xml
+++ b/livres.publies/regnier/oeuvres/build.xml
@@ -32,6 +32,7 @@
     <book x='sites'/>
     <book x='01_premiers_poemes'/>
     <book x='02_poemes'/>
+    <book x='03_les_jeux_rustiques_et_divins'/>
     <book x='04_les_medailles_d_argile'/>
     <book x='05_la_cite_des_eaux'/>
     <book x='06_la_sandale_ailee'/>
