Mille — Christine et lui

--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -145,6 +145,7 @@
       <ant target='@{target}' dir='marinetti/mafarka_le_futuriste'/>
       <ant target='@{target}' dir='marx/manifeste_du_parti_communiste'/>
       <ant target='@{target}' dir='michel/memoires_de_louise_michel'/>
+      <ant target='@{target}' dir='mille/christine_et_lui'/>
       <ant target='@{target}' dir='moselly/jean_des_brebis'/>
       <ant target='@{target}' dir='moselly/terres_lorraines'/>
       <ant target='@{target}' dir='muller/mon_dernier_combat'/>
