000620  2019-07-21    Pelloutier — L’art et la révolte

--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -164,6 +164,7 @@
       <ant target='@{target}' dir='pawlowski/polochon'/>
       <ant target='@{target}' dir='pawlowski/voyage_au_pays_de_la_quatrieme_dimension'/>
       <ant target='@{target}' dir='pellerin/la_jeune_fille_aux_pinceaux'/>
+      <ant target='@{target}' dir='pelloutier/l_art_et_la_revolte'/>
       <ant target='@{target}' dir='philippe/bubu_de_montparnasse'/>
       <ant target='@{target}' dir='proudhon/theorie_de_la_propriete'/>
       <ant target='@{target}' dir='porche/a_chaque_jour'/>
