000624  2019-07-28    Coppée — Pour la couronne

--- a/livres.publies/coppee/oeuvres_completes/build.xml
+++ b/livres.publies/coppee/oeuvres_completes/build.xml
@@ -53,6 +53,10 @@
     <book x='46_l_homme_et_la_fortune'/>
     <book x='47_severo_torelli'/>
     <book x='48_les_jacobites'/>
+   <book x='49_la_korrigane'/>
+   <book x='50_maitre_ambros'/>
+   <book x='51_le_pater'/>
+   <book x='52_pour_la_couronne'/>
   </target>
 
   <target name='collections'>
