000625  2019-07-28    Franc-Nohain – Les inattentions et les sollicitudes

--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -107,6 +107,7 @@
       <ant target='@{target}' dir='faure/l_orateur_populaire'/>
       <ant target='@{target}' dir='flaubert/madame_bovary'/>
       <ant target='@{target}' dir='fourest/contes_pour_les_satyres'/>
+      <ant target='@{target}' dir='franc-nohain/les_inattentions_et_sollicitudes'/>
       <ant target='@{target}' dir='franc-nohain/les_salles_d_attente'/>
       <ant target='@{target}' dir='gilbert_de_voisins/ecrit_en_chine'/>
       <ant target='@{target}' dir='gilbert_de_voisins/la_petite_angoisse'/>
