--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -126,6 +126,7 @@
       <ant target='@{target}' dir='kropotkine/la_morale_anarchiste'/>
       <ant target='@{target}' dir='lafargue/pamphlets_socialistes'/>
       <ant target='@{target}' dir='laforgue/les_complaintes'/>
+      <ant target='@{target}' dir='laforgue/feuilles'/>
       <ant target='@{target}' dir='lautreamont/les_chants_de_maldoror'/>
       <ant target='@{target}' dir='lessig/free_culture'/>
       <ant target='@{target}' dir='leyret/en_plein_faubourg'/>
@@ -203,6 +204,7 @@
       <ant target='@{target}' dir='toulet/behanzigue'/>
       <ant target='@{target}' dir='theuriet/la_fortune_d_angele'/>
       <ant target='@{target}' dir='trotsky/ou_va_la_france'/>
+      <ant target='@{target}' dir='varinot/un_episode_de_guerre_tragi_comique'/>
       <ant target='@{target}' dir='varlet/aux_iles_bienheureuses'/>
       <ant target='@{target}' dir='verhaeren/les_flamandes'/>
       <ant target='@{target}' dir='vigny/oeuvres_completes'/>
