More files for 000635 and 000636

--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -97,6 +97,7 @@
       <ant target='@{target}' dir='dabit/l_hotel_du_nord'/>
       <ant target='@{target}' dir='darwin/journal_of_researches'/>
       <ant target='@{target}' dir='daudet/lettres_de_mon_moulin'/>
+      <ant target='@{target}' dir='daumal/la_guerre_sainte'/>
       <ant target='@{target}' dir='decembre-alonnier/typographes_et_gens_de_lettres'/>
       <ant target='@{target}' dir='dereme/le_laurier_du_kaiser'/>
       <ant target='@{target}' dir='derennes/l_enfant_dans_l_herbe'/>
@@ -174,9 +175,10 @@
       <ant target='@{target}' dir='pellerin/la_jeune_fille_aux_pinceaux'/>
       <ant target='@{target}' dir='pelloutier/l_art_et_la_revolte'/>
       <ant target='@{target}' dir='philippe/bubu_de_montparnasse'/>
-      <ant target='@{target}' dir='proudhon/theorie_de_la_propriete'/>
       <ant target='@{target}' dir='porche/a_chaque_jour'/>
       <ant target='@{target}' dir='porche/le_poeme_de_la_tranchee'/>
+      <ant target='@{target}' dir='proudhon/theorie_de_la_propriete'/>
+      <ant target='@{target}' dir='prudhomme/poesies'/>
       <ant target='@{target}' dir='rameau/la_vie_et_la_mort'/>
       <ant target='@{target}' dir='rebell/les_nuits_chaudes_du_cap_francais'/>
       <ant target='@{target}' dir='reboul/le_pere_bacchus'/>
