--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -99,6 +99,7 @@
       <ant target='@{target}' dir='daudet/lettres_de_mon_moulin'/>
       <ant target='@{target}' dir='daumal/la_guerre_sainte'/>
       <ant target='@{target}' dir='decembre-alonnier/typographes_et_gens_de_lettres'/>
+      <ant target='@{target}' dir='dereme/erene'/>
       <ant target='@{target}' dir='dereme/le_laurier_du_kaiser'/>
       <ant target='@{target}' dir='derennes/l_enfant_dans_l_herbe'/>
       <ant target='@{target}' dir='descaves/sous-offs'/>
