--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -128,6 +128,7 @@
       <ant target='@{target}' dir='jaloux/au_dessus_de_la_ville'/>
       <ant target='@{target}' dir='jaloux/la_constellation'/>
       <ant target='@{target}' dir='jaloux/le_reste_est_silence'/>
+      <ant target='@{target}' dir='jaloux/les_figures_de_cire'/>
       <ant target='@{target}' dir='journet/l_ere_de_la_femme'/>
       <ant target='@{target}' dir='kock/l_enfant_de_ma_femme'/>
       <ant target='@{target}' dir='kock/un_mari_perdu'/>
