--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -215,6 +215,7 @@
       <ant target='@{target}' dir='tarde/psychologie_economique'/>
       <ant target='@{target}' dir='tinan/erythree'/>
       <ant target='@{target}' dir='toulet/behanzigue'/>
+      <ant target='@{target}' dir='toulet/les_demoiselles_la_mortagne'/>
       <ant target='@{target}' dir='theuriet/la_fortune_d_angele'/>
       <ant target='@{target}' dir='trotsky/ou_va_la_france'/>
       <ant target='@{target}' dir='varinot/un_episode_de_guerre_tragi_comique'/>
