--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -98,6 +98,7 @@
       <ant target='@{target}' dir='darwin/journal_of_researches'/>
       <ant target='@{target}' dir='daudet/lettres_de_mon_moulin'/>
       <ant target='@{target}' dir='daumal/la_guerre_sainte'/>
+      <ant target='@{target}' dir='daumal/la_grande_beuverie'/>
       <ant target='@{target}' dir='decembre-alonnier/typographes_et_gens_de_lettres'/>
       <ant target='@{target}' dir='dereme/erene'/>
       <ant target='@{target}' dir='dereme/le_laurier_du_kaiser'/>
@@ -128,6 +129,7 @@
       <ant target='@{target}' dir='huysmans/marthe'/>
       <ant target='@{target}' dir='janin/un_hiver_a_paris'/>
       <ant target='@{target}' dir='jaloux/au_dessus_de_la_ville'/>
+      <ant target='@{target}' dir='jaloux/l_alcyone'/>
       <ant target='@{target}' dir='jaloux/la_constellation'/>
       <ant target='@{target}' dir='jaloux/le_reste_est_silence'/>
       <ant target='@{target}' dir='jaloux/les_figures_de_cire'/>
