--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -36,6 +36,7 @@
       <ant target='@{target}' dir='rolland/jean_christophe'/>
       <ant target='@{target}' dir='moliere/oeuvres_completes'/>
       <ant target='@{target}' dir='coppee/oeuvres_completes'/>
+      <ant target='@{target}' dir='prudhomme/poesies'/>
 
       <ant target='@{target}' dir='about/ces_coquins_d_agents_de_change'/>
       <ant target='@{target}' dir='about/le_roi_des_montagnes'/>
@@ -131,6 +132,7 @@
       <ant target='@{target}' dir='jaloux/au_dessus_de_la_ville'/>
       <ant target='@{target}' dir='jaloux/l_alcyone'/>
       <ant target='@{target}' dir='jaloux/la_constellation'/>
+      <ant target='@{target}' dir='jaloux/l_egaree'/>
       <ant target='@{target}' dir='jaloux/le_reste_est_silence'/>
       <ant target='@{target}' dir='jaloux/les_figures_de_cire'/>
       <ant target='@{target}' dir='jaloux/o_toi_que_j_eusse_aimee'/>
