--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -221,6 +221,7 @@
       <ant target='@{target}' dir='toulet/behanzigue'/>
       <ant target='@{target}' dir='toulet/les_demoiselles_la_mortagne'/>
       <ant target='@{target}' dir='toulet/mon_amie_nane'/>
+      <ant target='@{target}' dir='theuriet/contes_pour_les_soirs_d_hiver'/>
       <ant target='@{target}' dir='theuriet/la_fortune_d_angele'/>
       <ant target='@{target}' dir='trotsky/ou_va_la_france'/>
       <ant target='@{target}' dir='varinot/un_episode_de_guerre_tragi_comique'/>
