--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -152,6 +152,7 @@
       <ant target='@{target}' dir='mac_orlan/a_bord_de_l_etoile_matutine'/>
       <ant target='@{target}' dir='mac_orlan/la_bete_conquerante'/>
       <ant target='@{target}' dir='mac_orlan/la_cavaliere_elsa'/>
+      <ant target='@{target}' dir='mac_orlan/la_clique_du_cafe_brebis'/>
       <ant target='@{target}' dir='mac_orlan/la_fin'/>
       <ant target='@{target}' dir='mac_orlan/le_chant_de_l_equipage'/>
       <ant target='@{target}' dir='mac_orlan/les_poissons_morts'/>
