000663  2022-08-16    Mac Orlan - La maison du retour écœurant

--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -154,6 +154,7 @@
       <ant target='@{target}' dir='mac_orlan/la_cavaliere_elsa'/>
       <ant target='@{target}' dir='mac_orlan/la_clique_du_cafe_brebis'/>
       <ant target='@{target}' dir='mac_orlan/la_fin'/>
+      <ant target='@{target}' dir='mac_orlan/la_maison_du_retour_ecoeurant'/>
       <ant target='@{target}' dir='mac_orlan/le_chant_de_l_equipage'/>
       <ant target='@{target}' dir='mac_orlan/les_poissons_morts'/>
       <ant target='@{target}' dir='mac_orlan/petit_manuel_du_parfait_aventurier'/>
