"Sully" n'est pas un prénom.

--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -37,7 +37,7 @@
       <ant target='@{target}' dir='rolland/jean_christophe'/>
       <ant target='@{target}' dir='coppee/oeuvres_completes'/>
       <ant target='@{target}' dir='samain/oeuvres'/>
-      <ant target='@{target}' dir='prudhomme/poesies'/>
+      <ant target='@{target}' dir='sully_prudhomme/poesies'/>
 
       <ant target='@{target}' dir='about/ces_coquins_d_agents_de_change'/>
       <ant target='@{target}' dir='about/le_roi_des_montagnes'/>
