000667  2022-08-01    Mac Orlan — Aux lumières de Paris

--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -151,6 +151,7 @@
       <ant target='@{target}' dir='liquier/le_trac_d_un_gendre'/>
       <ant target='@{target}' dir='liquier/mon_futur'/>
       <ant target='@{target}' dir='mac_orlan/a_bord_de_l_etoile_matutine'/>
+      <ant target='@{target}' dir='mac_orlan/aux_lumieres_de_paris'/>
       <ant target='@{target}' dir='mac_orlan/la_bete_conquerante'/>
       <ant target='@{target}' dir='mac_orlan/la_cavaliere_elsa'/>
       <ant target='@{target}' dir='mac_orlan/la_clique_du_cafe_brebis'/>
