--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -157,6 +157,7 @@
       <ant target='@{target}' dir='mac_orlan/la_clique_du_cafe_brebis'/>
       <ant target='@{target}' dir='mac_orlan/la_fin'/>
       <ant target='@{target}' dir='mac_orlan/la_maison_du_retour_ecoeurant'/>
+      <ant target='@{target}' dir='mac_orlan/la_venus_internationale'/>
       <ant target='@{target}' dir='mac_orlan/le_chant_de_l_equipage'/>
       <ant target='@{target}' dir='mac_orlan/les_poissons_morts'/>
       <ant target='@{target}' dir='mac_orlan/petit_manuel_du_parfait_aventurier'/>
@@ -239,8 +240,6 @@
   </macrodef>
 
 
-
-  <target name='foo'>             <iterate target="foo"/>           </target>
 
   <target name='build'>           <iterate target="build"/>         </target>
   <target name='tirages'>         <iterate target="tirages"/>       </target>
