--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -118,6 +118,7 @@
       <ant target='@{target}' dir='franc-nohain/les_inattentions_et_sollicitudes'/>
       <ant target='@{target}' dir='franc-nohain/les_salles_d_attente'/>
       <ant target='@{target}' dir='gide/isabelle'/>
+      <ant target='@{target}' dir='gide/retour_de_l_urss'/>
       <ant target='@{target}' dir='gide/souvenirs_de_la_cour_d_assises'/>
       <ant target='@{target}' dir='gilbert_de_voisins/ecrit_en_chine'/>
       <ant target='@{target}' dir='gilbert_de_voisins/la_petite_angoisse'/>
