--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -118,6 +118,7 @@
       <ant target='@{target}' dir='franc-nohain/les_inattentions_et_sollicitudes'/>
       <ant target='@{target}' dir='franc-nohain/les_salles_d_attente'/>
       <ant target='@{target}' dir='gide/isabelle'/>
+      <ant target='@{target}' dir='gide/retouches_a_mon_retour_de_l_urss'/>
       <ant target='@{target}' dir='gide/retour_de_l_urss'/>
       <ant target='@{target}' dir='gide/souvenirs_de_la_cour_d_assises'/>
       <ant target='@{target}' dir='gilbert_de_voisins/ecrit_en_chine'/>
@@ -130,6 +131,7 @@
       <ant target='@{target}' dir='huysmans/en_menage'/>
       <ant target='@{target}' dir='huysmans/en_rade'/>
       <ant target='@{target}' dir='huysmans/marthe'/>
+      <ant target='@{target}' dir='huysmans/un_dilemne'/>
       <ant target='@{target}' dir='janin/un_hiver_a_paris'/>
       <ant target='@{target}' dir='jaloux/au_dessus_de_la_ville'/>
       <ant target='@{target}' dir='jaloux/l_alcyone'/>
