000673  2023-11-29    François — Laudato si’

--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -117,6 +117,7 @@
       <ant target='@{target}' dir='fourest/contes_pour_les_satyres'/>
       <ant target='@{target}' dir='franc-nohain/les_inattentions_et_sollicitudes'/>
       <ant target='@{target}' dir='franc-nohain/les_salles_d_attente'/>
+      <ant target='@{target}' dir='francois/laudato_si'/>
       <ant target='@{target}' dir='gide/isabelle'/>
       <ant target='@{target}' dir='gide/retouches_a_mon_retour_de_l_urss'/>
       <ant target='@{target}' dir='gide/retour_de_l_urss'/>
