--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -119,6 +119,7 @@
       <ant target='@{target}' dir='franc-nohain/les_inattentions_et_sollicitudes'/>
       <ant target='@{target}' dir='franc-nohain/les_salles_d_attente'/>
       <ant target='@{target}' dir='francois/laudato_si'/>
+      <ant target='@{target}' dir='francois/laudate_deum'/>
       <ant target='@{target}' dir='gide/isabelle'/>
       <ant target='@{target}' dir='gide/retouches_a_mon_retour_de_l_urss'/>
       <ant target='@{target}' dir='gide/retour_de_l_urss'/>
