--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -120,6 +120,7 @@
       <ant target='@{target}' dir='franc-nohain/les_salles_d_attente'/>
       <ant target='@{target}' dir='francois/laudato_si'/>
       <ant target='@{target}' dir='francois/laudate_deum'/>
+      <ant target='@{target}' dir='frapie/la_maternelle'/>
       <ant target='@{target}' dir='gide/isabelle'/>
       <ant target='@{target}' dir='gide/retouches_a_mon_retour_de_l_urss'/>
       <ant target='@{target}' dir='gide/retour_de_l_urss'/>
