000681  2024-01-10    Châteaubriant — Monsieur des Lourdines

--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -90,6 +90,7 @@
       <ant target='@{target}' dir='buchon/scenes_franc_comtoises'/>
       <ant target='@{target}' dir='chamfort/oeuvres_completes_auguis'/>
       <ant target='@{target}' dir='champsaur/dinah_samuel'/>
+      <ant target='@{target}' dir='chateaubriant_alphonse_de/monsieur_des_lourdines'/>
       <ant target='@{target}' dir='chenu/de_l_arriere_a_l_avant'/>
       <ant target='@{target}' dir='christophe/souvenirs_d_un_vieux_typographe'/>
       <ant target='@{target}' dir='combette/l_isolement'/>
