000683  2024-02-14    Borlaug — Mankind and Civilization at Another Crossroad

--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -83,6 +83,8 @@
       <ant target='@{target}' dir='bernard/les_coteaux_du_medoc'/>
       <ant target='@{target}' dir='bloy/exegese_des_lieux_communs'/>
       <ant target='@{target}' dir='bloy/exegese_nouvelle_serie'/>
+      <ant target='@{target}' dir='bookchin/our_synthetic_environment'/>
+      <ant target='@{target}' dir='borlaug/mankind_and_civilization'/>
       <ant target='@{target}' dir='bourgeois/solidarite'/>
       <ant target='@{target}' dir='bourgeois/les_applications_de_la_solidarite_sociale'/>
       <ant target='@{target}' dir='boutmy/dictionnaire_de_l_argot_des_typographes'/>
