--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -173,6 +173,7 @@
       <ant target='@{target}' dir='mac_orlan/petit_manuel_du_parfait_aventurier'/>
       <ant target='@{target}' dir='mac_orlan/u_713'/>
       <ant target='@{target}' dir='mac_orlan/sous_la_lumiere_froide'/>
+      <ant target='@{target}' dir='mansholt/mansholt_letter'/>
       <ant target='@{target}' dir='margueritte_paul/simple_histoire'/>
       <ant target='@{target}' dir='margueritte_victor/la_garconne'/>
       <ant target='@{target}' dir='margueritte_victor/le_soleil_dans_la_geole'/>
