000685  2024-02-17    Ward, Dubos — Only One Earth

--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -247,6 +247,7 @@
       <ant target='@{target}' dir='verhaeren/les_flamandes'/>
       <ant target='@{target}' dir='vigny/oeuvres_completes'/>
       <ant target='@{target}' dir='violeau/histoires_de_chez_nous'/>
+      <ant target='@{target}' dir='ward-dubos/only_on_earth'/>
       <ant target='@{target}' dir='zola/lettre_a_m_felix_faure'/>
       <ant target='@{target}' dir='zola/lettre_a_la_jeunesse'/>
     </parallel>
