--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -148,6 +148,7 @@
       <ant target='@{target}' dir='jaloux/les_figures_de_cire'/>
       <ant target='@{target}' dir='jaloux/o_toi_que_j_eusse_aimee'/>
       <ant target='@{target}' dir='journet/l_ere_de_la_femme'/>
+      <ant target='@{target}' dir='kapp/the_social_costs_of_business_enterprise'/>
       <ant target='@{target}' dir='kock/l_enfant_de_ma_femme'/>
       <ant target='@{target}' dir='kock/un_mari_perdu'/>
       <ant target='@{target}' dir='kropotkine/la_morale_anarchiste'/>
