000687  2024-02-29    The Ecologist — A Blueprint for Survival

--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -235,6 +235,7 @@
       <ant target='@{target}' dir='tailhade/discours_pour_la_paix'/>
       <ant target='@{target}' dir='tarde/psychologie_economique'/>
       <ant target='@{target}' dir='tharaud/dingley'/>
+      <ant target='@{target}' dir='the_ecologist/a_blueprint_for_survival'/>
       <ant target='@{target}' dir='theuriet/contes_pour_les_soirs_d_hiver'/>
       <ant target='@{target}' dir='theuriet/la_fortune_d_angele'/>
       <ant target='@{target}' dir='tinan/erythree'/>
