--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -172,6 +172,7 @@
       <ant target='@{target}' dir='mac_orlan/la_maison_du_retour_ecoeurant'/>
       <ant target='@{target}' dir='mac_orlan/la_venus_internationale'/>
       <ant target='@{target}' dir='mac_orlan/le_chant_de_l_equipage'/>
+      <ant target='@{target}' dir='mac_orlan/le_negre_leonard_et_maitre_jean_mullin'/>
       <ant target='@{target}' dir='mac_orlan/les_poissons_morts'/>
       <ant target='@{target}' dir='mac_orlan/petit_manuel_du_parfait_aventurier'/>
       <ant target='@{target}' dir='mac_orlan/u_713'/>
