--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -191,6 +191,7 @@
       <ant target='@{target}' dir='moselly/terres_lorraines'/>
       <ant target='@{target}' dir='muller/mon_dernier_combat'/>
       <ant target='@{target}' dir='murger/les_buveurs_d_eau'/>
+      <ant target='@{target}' dir='nrc/carbon_dioxide_and_climate'/>
       <ant target='@{target}' dir='nau/force_ennemie'/>
       <ant target='@{target}' dir='nau/lettres_de_corse_et_de_bretagne'/>
       <ant target='@{target}' dir='nerval/oeuvres_completes'/>
