000693  2024-08-20    Roupnel — Le vieux Garain

--- a/livres.publies/build.xml
+++ b/livres.publies/build.xml
@@ -219,6 +219,7 @@
       <ant target='@{target}' dir='robert/papa'/>
       <ant target='@{target}' dir='rolland/au_dessus_de_la_melee'/>
       <ant target='@{target}' dir='rostand/cyrano_de_bergerac'/>
+      <ant target='@{target}' dir='roupnel/le_vieux_garain'/>
       <ant target='@{target}' dir='roussel/chiquenaude'/>
       <ant target='@{target}' dir='roussel/impressions_d_afrique'/>
       <ant target='@{target}' dir='roussel/la_doublure'/>
