Un peu de nettoyage

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.DS_Store
+Thumbs.db
 scans/
 build/
 results/
@@ -9,6 +11,4 @@ livres.termines/
 livres.publies/efele_catalogue_commun.txt
 livres.publies/feed.xml
 livres.publies/liste.epub.html
-livres.publies/liste.daisy.html
-livres.publies/liste.mobipocket.html
 livres.publies/liste.sources.html
